--- a/templates/CustomColumnsOverride/v1.serviceaccounts.yaml
+++ b/templates/CustomColumnsOverride/v1.serviceaccounts.yaml
@@ -2,7 +2,7 @@
 apiVersion: front.in-cloud.io/v1alpha1
 kind: CustomColumnsOverride
 metadata:
-  name: "stock-cluster-apps.v1.replicationcontroller"
+  name: stock-cluster-v1.serviceaccounts
 spec:
   additionalPrinterColumns:
     - jsonPath: .metadata.name
@@ -11,56 +11,58 @@ spec:
     - jsonPath: .metadata.namespace
       name: Namespace
       type: string
-    - jsonPath: .metadata.labels
-      name: Labels
-      type: string
-    - jsonPath: .metadata.ownerReferences[*].name
-      name: Owner
+    - jsonPath: .secrets[*].name
+      name: Secrets
       type: string
     - jsonPath: .metadata.creationTimestamp
       name: Created
       type: date
+  additionalPrinterColumnsUndefinedValues:
+    - key: Namespace
+      value: "-"
+    - key: Secrets
+      value: "-"
   additionalPrinterColumnsTrimLengths:
     - key: Name
       value: 64
-    - key: Labels
+    - key: Secrets
       value: 1
-  id: "stock-cluster-/v1/replicationcontrollers"
+  id: stock-cluster-/v1/serviceaccounts
 
 ---
 apiVersion: front.in-cloud.io/v1alpha1
 kind: CustomColumnsOverride
 metadata:
-  name: "stock-namespace-apps.v1.replicationcontroller"
+  name: stock-namespace-v1.serviceaccounts
 spec:
   additionalPrinterColumns:
     - jsonPath: .metadata.name
       name: Name
       type: string
-    - jsonPath: .metadata.labels
-      name: Labels
-      type: string
-    - jsonPath: .metadata.ownerReferences[*].name
-      name: Owner
+    - jsonPath: .secrets
+      name: Secrets
       type: string
     - jsonPath: .metadata.creationTimestamp
       name: Created
       type: date
+  additionalPrinterColumnsUndefinedValues:
+    - key: Secrets
+      value: "-"
   additionalPrinterColumnsTrimLengths:
     - key: Name
       value: 64
-    - key: Labels
+    - key: Secrets
       value: 1
-  id: "stock-namespace-/v1/replicationcontrollers"
+  id: stock-namespace-/v1/serviceaccounts
 
 ---
 apiVersion: front.in-cloud.io/v1alpha1
 kind: CustomColumnsOverride
 metadata:
-  name: "factory-replicationcontroller-details-volume-list"
+  name: factory-serviceaccount-secrets
 spec:
   additionalPrinterColumns:
     - jsonPath: .name
       name: Name
       type: string
-  id: "factory-replicationcontroller-details-volume-list"
+  id: factory-serviceaccount-secrets
