--- a/templates/Factory/replicaset-details.yaml
+++ b/templates/Factory/replicaset-details.yaml
@@ -181,13 +181,13 @@ spec:
                                   vertical: true
                                   gap: 4
                                 children:
-                                  {{ include "incloud-web-resources.factory.counters.fields" (dict
-                                      "jsonPath" ".spec.template.spec.tolerations"
-                                      "type" "tolerations"
-                                      "title" "Tolerations"
+                                  {{ include "incloud-web-resources.factory.tolerations.block" (dict 
+                                    "endpoint" "/api/clusters/{2}/k8s/api/v1/namespaces/{3}/pods/{6}"
+                                    "jsonPathToArray" ".spec.tolerations"
+                                    "pathToValue" "/spec/tolerations"
                                     ) | nindent 34
                                   }}
-
+                                  
                               # Annotations counter block
                               - type: antdFlex
                                 data:
@@ -216,24 +216,24 @@ spec:
                                   }}
 
                               # Owner block
-                              - type: antdFlex
-                                data:
-                                  id: meta-owner-block
-                                  vertical: true
-                                  gap: 4
-                                children:
-                                  - type: antdText
-                                    data:
-                                      id: meta-owner-label
-                                      text: Owner
-                                      strong: true
-                                  - type: parsedText
-                                    data:
-                                      id: meta-owner-fallback
-                                      strong: true
-                                      text: "No owner"
-                                      style:
-                                        color: red
+                              # - type: antdFlex
+                              #   data:
+                              #     id: meta-owner-block
+                              #     vertical: true
+                              #     gap: 4
+                              #   children:
+                              #     - type: antdText
+                              #       data:
+                              #         id: meta-owner-label
+                              #         text: Owner
+                              #         strong: true
+                              #     - type: parsedText
+                              #       data:
+                              #         id: meta-owner-fallback
+                              #         strong: true
+                              #         text: "No owner"
+                              #         style:
+                              #           color: red
 
                       # Right column: replica counts
                       - type: antdCol
@@ -282,42 +282,43 @@ spec:
                                       text: "{reqsJsonPath[0]['.spec.replicas']['-']}"
 
                   # Volumes section
-                  - type: antdCol
-                    data:
-                      id: volumes-col
-                      style:
-                        marginTop: 10
-                        padding: 10
-                    children:
-                      - type: VisibilityContainer
-                        data:
-                          id: volumes-visibility
-                          value: "{reqsJsonPath[0]['.spec.template.spec.volumes']['-']}"
-                          style:
-                            margin: 0
-                            padding: 0
-                        children:
-                          - type: antdText
-                            data:
-                              id: volumes-title
-                              text: Volumes
-                              strong: true
-                              style:
-                                fontSize: 22px
-                                marginBottom: 32px
-                          - type: EnrichedTable
-                            data:
-                              id: volumes-table
-                              fetchUrl: "/api/clusters/{2}/k8s/apis/apps/v1/namespaces/{3}/replicasets/{6}"
-                              clusterNamePartOfUrl: "{2}"
-                              customizationId: factory-replicaset-details-volume-list
-                              baseprefix: "/openapi-ui"
-                              withoutControls: true
-                              pathToItems:
-                                - spec
-                                - template
-                                - spec
-                                - volumes
+                  # TODO to be done
+                  # - type: antdCol
+                  #   data:
+                  #     id: volumes-col
+                  #     style:
+                  #       marginTop: 10
+                  #       padding: 10
+                  #   children:
+                  #     - type: VisibilityContainer
+                  #       data:
+                  #         id: volumes-visibility
+                  #         value: "{reqsJsonPath[0]['.spec.template.spec.volumes']['-']}"
+                  #         style:
+                  #           margin: 0
+                  #           padding: 0
+                  #       children:
+                  #         - type: antdText
+                  #           data:
+                  #             id: volumes-title
+                  #             text: Volumes
+                  #             strong: true
+                  #             style:
+                  #               fontSize: 22px
+                  #               marginBottom: 32px
+                  #         - type: EnrichedTable
+                  #           data:
+                  #             id: volumes-table
+                  #             fetchUrl: "/api/clusters/{2}/k8s/apis/apps/v1/namespaces/{3}/replicasets/{6}"
+                  #             clusterNamePartOfUrl: "{2}"
+                  #             customizationId: factory-replicaset-details-volume-list
+                  #             baseprefix: "/openapi-ui"
+                  #             withoutControls: true
+                  #             pathToItems:
+                  #               - spec
+                  #               - template
+                  #               - spec
+                  #               - volumes
 
 
                   # ---- INIT CONTAINERS SECTION ----
