--- a/templates/Factory/serviceaccount-details.yaml
+++ b/templates/Factory/serviceaccount-details.yaml
@@ -65,22 +65,6 @@ spec:
                   style:
                     marginBottom: 24px
                 children:
-                  # Title
-                  - type: antdText
-                    data:
-                      id: details-title
-                      text: "ServiceAccount details"
-                      strong: true
-                      style:
-                        fontSize: 20
-                        marginBottom: 12px
-
-                  # Spacer
-                  - type: Spacer
-                    data:
-                      id: details-spacer
-                      "$space": 16
-
                   # Two-column layout
                   - type: antdRow
                     data:
@@ -93,6 +77,22 @@ spec:
                           id: col-left
                           span: 12
                         children:
+                          # Title
+                          - type: antdText
+                            data:
+                              id: details-title
+                              text: "ServiceAccount details"
+                              strong: true
+                              style:
+                                fontSize: 20
+                                marginBottom: 12px
+
+                          # Spacer
+                          - type: Spacer
+                            data:
+                              id: details-spacer
+                              "$space": 16
+
                           - type: antdFlex
                             data:
                               id: col-left-stack
@@ -173,30 +173,68 @@ spec:
                                   }}
 
                               # Owner block
-                              - type: antdFlex
+                              # - type: antdFlex
+                              #   data:
+                              #     id: meta-owner-block
+                              #     vertical: true
+                              #     gap: 4
+                              #   children:
+                              #     - type: antdText
+                              #       data:
+                              #         id: meta-owner-label
+                              #         strong: true
+                              #         text: "Owner"
+                              #     - type: antdFlex
+                              #       data:
+                              #         id: meta-owner-flex
+                              #         gap: 6
+                              #         align: center
+                              #       children:
+                              #         - type: parsedText
+                              #           data:
+                              #             id: owner-value
+                              #             strong: true
+                              #             text: "No owner"
+                              #             style:
+                              #               color: red
+
+                      - type: antdCol
+                        data:
+                          id: col-right
+                          span: 12
+                        children:
+                          - type: VisibilityContainer
+                            data:
+                              id: secrets-visibility
+                              value: "{reqsJsonPath[0]['.secrets']['-']}"
+                              style:
+                                margin: 0
+                                padding: 0
+                            children:
+                              # Secrets title
+                              - type: antdText
                                 data:
-                                  id: meta-owner-block
-                                  vertical: true
-                                  gap: 4
-                                children:
-                                  - type: antdText
-                                    data:
-                                      id: meta-owner-label
-                                      strong: true
-                                      text: "Owner"
-                                  - type: antdFlex
-                                    data:
-                                      id: meta-owner-flex
-                                      gap: 6
-                                      align: center
-                                    children:
-                                      - type: parsedText
-                                        data:
-                                          id: owner-value
-                                          strong: true
-                                          text: "No owner"
-                                          style:
-                                            color: red
+                                  id: secrets-title
+                                  text: "Secrets"
+                                  strong: true
+                                  style:
+                                    fontSize: 22
+                              # Spacer
+                              - type: Spacer
+                                data:
+                                  id: details-spacer
+                                  "$space": 16
+                              # Secrets table
+                              - type: EnrichedTable
+                                data:
+                                  id: secrets-table
+                                  fetchUrl: "/api/clusters/{2}/k8s/api/v1/namespaces/{3}/serviceaccounts/{6}"
+                                  clusterNamePartOfUrl: "{2}"
+                                  customizationId: factory-serviceaccount-secrets
+                                  baseprefix: "/openapi-ui"
+                                  withoutControls: true
+                                  pathToItems:
+                                    - secrets
 
           # YAML tab
           - key: yaml
