--- a/templates/TableUriMapping/v1.namespaces.yaml
+++ b/templates/TableUriMapping/v1.namespaces.yaml
@@ -1,15 +1,11 @@
-apiVersion: v1
-items:
-  - apiVersion: front.in-cloud.io/v1alpha1
-    kind: TableUriMapping
-    metadata:
-      name: stock-cluster-namespace-details
-    spec:
-      keysToParse:
-        - metadata
-        - name
-      id: "stock-cluster-/v1/namespaces"
-      pathToNavigate: "/openapi-ui/{clusterName}/factory/namespace-details/~recordValue~"
-
-kind: List
+---
+apiVersion: front.in-cloud.io/v1alpha1
+kind: TableUriMapping
 metadata:
+  name: stock-cluster-namespace-details
+spec:
+  keysToParse:
+    - metadata
+    - name
+  id: "stock-cluster-/v1/namespaces"
+  pathToNavigate: "/openapi-ui/{clusterName}/factory/namespace-details/~recordValue~"
