--- a/templates/TableUriMapping/v1.serviceaccounts.yaml
+++ b/templates/TableUriMapping/v1.serviceaccounts.yaml
@@ -1,32 +1,40 @@
-apiVersion: v1
-items:
-  - apiVersion: front.in-cloud.io/v1alpha1
-    kind: TableUriMapping
-    metadata:
-      name: stock-cluster-serviceaccount-details
-    spec:
-      keysToParse:
-        - metadata
-        - name
-      keysToParseSecond:
-        - metadata
-        - namespace
-      id: "stock-cluster-/v1/serviceaccounts"
-      pathToNavigate: "/openapi-ui/{clusterName}/~recordValueSecond~/factory/serviceaccount-details/~recordValue~"
-
-  - apiVersion: front.in-cloud.io/v1alpha1
-    kind: TableUriMapping
-    metadata:
-      name: stock-namespace-serviceaccount-details
-    spec:
-      keysToParse:
-        - metadata
-        - name
-      keysToParseSecond:
-        - metadata
-        - namespace
-      id: "stock-namespace-/v1/serviceaccounts"
-      pathToNavigate: "/openapi-ui/{clusterName}/~recordValueSecond~/factory/serviceaccount-details/~recordValue~"
-
-kind: List
+---
+apiVersion: front.in-cloud.io/v1alpha1
+kind: TableUriMapping
 metadata:
+  name: stock-cluster-serviceaccount-details
+spec:
+  keysToParse:
+    - metadata
+    - name
+  keysToParseSecond:
+    - metadata
+    - namespace
+  id: "stock-cluster-/v1/serviceaccounts"
+  pathToNavigate: "/openapi-ui/{clusterName}/~recordValueSecond~/factory/serviceaccount-details/~recordValue~"
+
+---
+apiVersion: front.in-cloud.io/v1alpha1
+kind: TableUriMapping
+metadata:
+  name: stock-namespace-serviceaccount-details
+spec:
+  keysToParse:
+    - metadata
+    - name
+  keysToParseSecond:
+    - metadata
+    - namespace
+  id: "stock-namespace-/v1/serviceaccounts"
+  pathToNavigate: "/openapi-ui/{clusterName}/~recordValueSecond~/factory/serviceaccount-details/~recordValue~"
+
+---
+apiVersion: front.in-cloud.io/v1alpha1
+kind: TableUriMapping
+metadata:
+  name: factory-serviceaccount-secrets
+spec:
+  keysToParse:
+    - name
+  id: "factory-serviceaccount-secrets"
+  pathToNavigate: "/openapi-ui/{2}/{3}/factory/secret-details/~recordValue~"
