--- a/templates/Breadcrumb/factory/apiextensions.k8s.io.v1.crd.yaml
+++ b/templates/Breadcrumb/factory/apiextensions.k8s.io.v1.crd.yaml
@@ -1,26 +1,22 @@
-apiVersion: v1
-items:
-  - apiVersion: front.in-cloud.io/v1alpha1
-    kind: Breadcrumb
-    metadata:
-      name: stock-cluster-factory-crd-details
-    spec:
-      id: "stock-cluster-factory-crd-details"
-      breadcrumbItems:
-        - key: In-Cloud
-          label: In-Cloud
-          link: "/openapi-ui"
-        - key: clusterList
-          label: "Cluster List"
-          link: "/openapi-ui/clusters"
-        - key: cluster
-          label: "{clusterName}"
-          link: "/openapi-ui/clusters/{clusterName}"
-        - key: customresourcedefinition
-          label: "customresourcedefinitions"
-          link: "/openapi-ui/{clusterName}/api-table/apiextensions.k8s.io/v1/customresourcedefinitions"
-        - key: customresourcedefinitions
-          label: "{5}"
-
-kind: List
+---
+apiVersion: front.in-cloud.io/v1alpha1
+kind: Breadcrumb
 metadata:
+  name: stock-cluster-factory-crd-details
+spec:
+  id: "stock-cluster-factory-crd-details"
+  breadcrumbItems:
+    - key: In-Cloud
+      label: In-Cloud
+      link: "/openapi-ui"
+    - key: clusterList
+      label: "Cluster List"
+      link: "/openapi-ui/clusters"
+    - key: cluster
+      label: "{clusterName}"
+      link: "/openapi-ui/clusters/{clusterName}"
+    - key: customresourcedefinition
+      label: "customresourcedefinitions"
+      link: "/openapi-ui/{clusterName}/api-table/apiextensions.k8s.io/v1/customresourcedefinitions"
+    - key: customresourcedefinitions
+      label: "{5}"
