--- a/templates/Breadcrumb/factory/configmap-details.yaml
+++ b/templates/Breadcrumb/factory/configmap-details.yaml
@@ -1,30 +1,26 @@
-apiVersion: v1
-items:
-  - apiVersion: front.in-cloud.io/v1alpha1
-    kind: Breadcrumb
-    metadata:
-      name: stock-project-factory-configmap-details
-    spec:
-      id: "stock-project-factory-configmap-details"
-      breadcrumbItems:
-        - key: In-Cloud
-          label: In-Cloud
-          link: "/openapi-ui"
-        - key: clusterList
-          label: "Cluster List"
-          link: "/openapi-ui/clusters"
-        - key: cluster
-          label: "{clusterName}"
-          link: "/openapi-ui/clusters/{clusterName}"
-        - key: namespaces
-          label: "Namespaces"
-        - key: namespace
-          label: "{namespace}"
-        - key: configmaps
-          label: "configmaps"
-          link: "/openapi-ui/{clusterName}/{namespace}/builtin-table/configmaps"
-        - key: configmap
-          label: "{6}"
-
-kind: List
+---
+apiVersion: front.in-cloud.io/v1alpha1
+kind: Breadcrumb
 metadata:
+  name: stock-project-factory-configmap-details
+spec:
+  id: "stock-project-factory-configmap-details"
+  breadcrumbItems:
+    - key: In-Cloud
+      label: In-Cloud
+      link: "/openapi-ui"
+    - key: clusterList
+      label: "Cluster List"
+      link: "/openapi-ui/clusters"
+    - key: cluster
+      label: "{clusterName}"
+      link: "/openapi-ui/clusters/{clusterName}"
+    - key: namespaces
+      label: "Namespaces"
+    - key: namespace
+      label: "{namespace}"
+    - key: configmaps
+      label: "configmaps"
+      link: "/openapi-ui/{clusterName}/{namespace}/builtin-table/configmaps"
+    - key: configmap
+      label: "{6}"
