--- a/templates/Breadcrumb/stock-cluster-builtin.yaml
+++ b/templates/Breadcrumb/stock-cluster-builtin.yaml
@@ -1,78 +1,77 @@
-apiVersion: v1
-items:
-  - apiVersion: front.in-cloud.io/v1alpha1
-    kind: Breadcrumb
-    metadata:
-      name: stock-cluster-builtin-table
-    spec:
-      id: "stock-cluster-builtin-table"
-      breadcrumbItems:
-        - key: In-Cloud
-          label: In-Cloud
-          link: "/openapi-ui"
-        - key: clusterList
-          label: "Cluster List"
-          link: "/openapi-ui/clusters"
-        - key: cluster
-          label: "{clusterName}"
-          link: "/openapi-ui/clusters/{clusterName}"
-        - key: namespaces
-          label: "Namespaces"
-        - key: namespace
-          label: "All"
-        - key: api
-          label: "{typeName}"
-
-  - apiVersion: front.in-cloud.io/v1alpha1
-    kind: Breadcrumb
-    metadata:
-      name: stock-cluster-builtin-form
-    spec:
-      id: "stock-cluster-builtin-form"
-      breadcrumbItems:
-        - key: In-Cloud
-          label: In-Cloud
-          link: "/openapi-ui"
-        - key: clusterList
-          label: "Cluster List"
-          link: "/openapi-ui/clusters"
-        - key: cluster
-          label: "{clusterName}"
-          link: "/openapi-ui/clusters/{clusterName}"
-        - key: namespaces
-          label: "Namespaces"
-        - key: namespace
-          label: "All"
-        - key: create-api-res-namespaced-table
-          label: "{typeName}"
-          link: "/openapi-ui/{clusterName}/{namespace}/builtin-table/{typeName}"
-        - key: create-api-res-namespaced-typename
-          label: Create
-
-  - apiVersion: front.in-cloud.io/v1alpha1
-    kind: Breadcrumb
-    metadata:
-      name: stock-cluster-builtin-form-edit
-    spec:
-      id: "stock-cluster-builtin-form-edit"
-      breadcrumbItems:
-        - key: In-Cloud
-          label: In-Cloud
-          link: "/openapi-ui"
-        - key: clusterList
-          label: "Cluster List"
-          link: "/openapi-ui/clusters"
-        - key: cluster
-          label: "{clusterName}"
-          link: "/openapi-ui/clusters/{clusterName}"
-        - key: namespaces
-          label: "Namespaces"
-        - key: namespace
-          label: "All"
-        - key: create-api-res-namespaced-table
-          label: "{typeName}"
-          link: "/openapi-ui/{clusterName}/{namespace}/builtin-table/{typeName}"
-        - key: create-api-res-namespaced-typename
-          label: Update
-kind: List
+---
+apiVersion: front.in-cloud.io/v1alpha1
+kind: Breadcrumb
 metadata:
+  name: stock-cluster-builtin-table
+spec:
+  id: "stock-cluster-builtin-table"
+  breadcrumbItems:
+    - key: In-Cloud
+      label: In-Cloud
+      link: "/openapi-ui"
+    - key: clusterList
+      label: "Cluster List"
+      link: "/openapi-ui/clusters"
+    - key: cluster
+      label: "{clusterName}"
+      link: "/openapi-ui/clusters/{clusterName}"
+    - key: namespaces
+      label: "Namespaces"
+    - key: namespace
+      label: "All"
+    - key: api
+      label: "{typeName}"
+
+---
+apiVersion: front.in-cloud.io/v1alpha1
+kind: Breadcrumb
+metadata:
+  name: stock-cluster-builtin-form
+spec:
+  id: "stock-cluster-builtin-form"
+  breadcrumbItems:
+    - key: In-Cloud
+      label: In-Cloud
+      link: "/openapi-ui"
+    - key: clusterList
+      label: "Cluster List"
+      link: "/openapi-ui/clusters"
+    - key: cluster
+      label: "{clusterName}"
+      link: "/openapi-ui/clusters/{clusterName}"
+    - key: namespaces
+      label: "Namespaces"
+    - key: namespace
+      label: "All"
+    - key: create-api-res-namespaced-table
+      label: "{typeName}"
+      link: "/openapi-ui/{clusterName}/{namespace}/builtin-table/{typeName}"
+    - key: create-api-res-namespaced-typename
+      label: Create
+
+---
+apiVersion: front.in-cloud.io/v1alpha1
+kind: Breadcrumb
+metadata:
+  name: stock-cluster-builtin-form-edit
+spec:
+  id: "stock-cluster-builtin-form-edit"
+  breadcrumbItems:
+    - key: In-Cloud
+      label: In-Cloud
+      link: "/openapi-ui"
+    - key: clusterList
+      label: "Cluster List"
+      link: "/openapi-ui/clusters"
+    - key: cluster
+      label: "{clusterName}"
+      link: "/openapi-ui/clusters/{clusterName}"
+    - key: namespaces
+      label: "Namespaces"
+    - key: namespace
+      label: "All"
+    - key: create-api-res-namespaced-table
+      label: "{typeName}"
+      link: "/openapi-ui/{clusterName}/{namespace}/builtin-table/{typeName}"
+    - key: create-api-res-namespaced-typename
+      label: Update
