--- a/templates/CustomColumnsOverride/apiextensions.k8s.io.v1.crd.yaml
+++ b/templates/CustomColumnsOverride/apiextensions.k8s.io.v1.crd.yaml
@@ -1,51 +1,48 @@
-apiVersion: v1
-items:
-  - apiVersion: front.in-cloud.io/v1alpha1
-    kind: CustomColumnsOverride
-    metadata:
-      name: stock-cluster-apiextensions.k8s.io.v1.customresourcedefinitions
-    spec:
-      additionalPrinterColumns:
-        - jsonPath: .spec.names.kind
-          name: Name
-          type: string
-        - jsonPath: .spec.group
-          name: Group
-          type: string
-        - jsonPath: .status.storedVersions[0]
-          name: Latest Version
-          type: string
-        - jsonPath: .status.conditions[?(@.type=='NamesAccepted')].status
-          name: Namespaced
-          type: string
-        - jsonPath: .status.conditions[?(@.type=='Established')].status
-          name: Established
-          type: string
-      additionalPrinterColumnsTrimLengths:
-        - key: Name
-          value: 64
-      id: stock-cluster-/apiextensions.k8s.io/v1/customresourcedefinitions
-
-  - apiVersion: front.in-cloud.io/v1alpha1
-    kind: CustomColumnsOverride
-    metadata:
-      name: versions-apiextensions.k8s.io.v1.customresourcedefinitions
-    spec:
-      additionalPrinterColumns:
-        - jsonPath: .name
-          name: Name
-          type: string
-        - jsonPath: .served
-          name: Served
-          type: string
-        - jsonPath: .storage
-          name: Storage
-          type: string
-
-      additionalPrinterColumnsTrimLengths:
-        - key: Name
-          value: 64
-      id: versions-apiextensions.k8s.io.v1.customresourcedefinitions
-
-kind: List
+---
+apiVersion: front.in-cloud.io/v1alpha1
+kind: CustomColumnsOverride
 metadata:
+  name: stock-cluster-apiextensions.k8s.io.v1.customresourcedefinitions
+spec:
+  additionalPrinterColumns:
+    - jsonPath: .spec.names.kind
+      name: Name
+      type: string
+    - jsonPath: .spec.group
+      name: Group
+      type: string
+    - jsonPath: .status.storedVersions[0]
+      name: Latest Version
+      type: string
+    - jsonPath: .status.conditions[?(@.type=='NamesAccepted')].status
+      name: Namespaced
+      type: string
+    - jsonPath: .status.conditions[?(@.type=='Established')].status
+      name: Established
+      type: string
+  additionalPrinterColumnsTrimLengths:
+    - key: Name
+      value: 64
+  id: stock-cluster-/apiextensions.k8s.io/v1/customresourcedefinitions
+
+---
+apiVersion: front.in-cloud.io/v1alpha1
+kind: CustomColumnsOverride
+metadata:
+  name: versions-apiextensions.k8s.io.v1.customresourcedefinitions
+spec:
+  additionalPrinterColumns:
+    - jsonPath: .name
+      name: Name
+      type: string
+    - jsonPath: .served
+      name: Served
+      type: string
+    - jsonPath: .storage
+      name: Storage
+      type: string
+
+  additionalPrinterColumnsTrimLengths:
+    - key: Name
+      value: 64
+  id: versions-apiextensions.k8s.io.v1.customresourcedefinitions
