--- a/templates/CustomColumnsOverride/batch.v1.cronjobs.yaml
+++ b/templates/CustomColumnsOverride/batch.v1.cronjobs.yaml
@@ -1,6 +1,5 @@
-apiVersion: v1
-items:
-  - apiVersion: front.in-cloud.io/v1alpha1
+---
+    apiVersion: front.in-cloud.io/v1alpha1
     kind: CustomColumnsOverride
     metadata:
       name: "stock-cluster-batch.v1.cronjobs"
@@ -37,7 +36,8 @@ items:
           value: "-"
       id: "stock-cluster-/batch/v1/cronjobs"
 
-  - apiVersion: front.in-cloud.io/v1alpha1
+---
+    apiVersion: front.in-cloud.io/v1alpha1
     kind: CustomColumnsOverride
     metadata:
       name: "stock-namespace-batch.v1.cronjobs"
@@ -70,6 +70,3 @@ items:
         - key: Starting deadline seconds
           value: "-"
       id: "stock-namespace-/batch/v1/cronjobs"
-
-kind: List
-metadata:
