--- a/templates/CustomColumnsOverride/batch.v1.jobs.yaml
+++ b/templates/CustomColumnsOverride/batch.v1.jobs.yaml
@@ -1,6 +1,5 @@
-apiVersion: v1
-items:
-  - apiVersion: front.in-cloud.io/v1alpha1
+---
+    apiVersion: front.in-cloud.io/v1alpha1
     kind: CustomColumnsOverride
     metadata:
       name: "stock-cluster-batch.v1.jobs"
@@ -43,7 +42,8 @@ items:
           value: "-"
       id: "stock-cluster-/batch/v1/jobs"
 
-  - apiVersion: front.in-cloud.io/v1alpha1
+---
+    apiVersion: front.in-cloud.io/v1alpha1
     kind: CustomColumnsOverride
     metadata:
       name: "stock-namespace-batch.v1.jobs"
@@ -83,7 +83,8 @@ items:
           value: "-"
       id: "stock-namespace-/batch/v1/jobs"
 
-  - apiVersion: front.in-cloud.io/v1alpha1
+---
+    apiVersion: front.in-cloud.io/v1alpha1
     kind: CustomColumnsOverride
     metadata:
       name: "factory-batch.v1.jobs"
@@ -125,6 +126,3 @@ items:
         - key: Starting deadline seconds
           value: "-"
       id: "factory-/batch/v1/jobs"
-
-kind: List
-metadata:
