--- a/templates/CustomColumnsOverride/factory-pod-details-list.yaml
+++ b/templates/CustomColumnsOverride/factory-pod-details-list.yaml
@@ -1,17 +1,11 @@
-# TODO не используется, удалить
-apiVersion: v1
-items:
-  - apiVersion: front.in-cloud.io/v1alpha1
-    kind: CustomColumnsOverride
-    metadata:
-      name: factory-pod-details-volume-list
-    spec:
-      additionalPrinterColumns:
-        - jsonPath: .name
-          name: Name
-          type: string
-
-      id: "factory-pod-details-volume-list"
-
-kind: List
+---
+apiVersion: front.in-cloud.io/v1alpha1
+kind: CustomColumnsOverride
 metadata:
+  name: factory-pod-details-volume-list
+spec:
+  additionalPrinterColumns:
+    - jsonPath: .name
+      name: Name
+      type: string
+  id: "factory-pod-details-volume-list"
