--- a/templates/CustomColumnsOverride/v1.secrets.yaml
+++ b/templates/CustomColumnsOverride/v1.secrets.yaml
@@ -1,6 +1,5 @@
-apiVersion: v1
-items:
-  - apiVersion: front.in-cloud.io/v1alpha1
+---
+    apiVersion: front.in-cloud.io/v1alpha1
     kind: CustomColumnsOverride
     metadata:
       name: "stock-cluster-v1.secrets"
@@ -23,7 +22,8 @@ items:
           value: 64
       id: "stock-cluster-/v1/secrets"
 
-  - apiVersion: front.in-cloud.io/v1alpha1
+---
+    apiVersion: front.in-cloud.io/v1alpha1
     kind: CustomColumnsOverride
     metadata:
       name: "stock-namespace-v1.secrets"
@@ -45,5 +45,3 @@ items:
         - key: Namespace
           value: "-"
       id: "stock-namespace-/v1/secrets"
-kind: List
-metadata:
