--- a/templates/Factory/argocd-appproject-details.yaml
+++ b/templates/Factory/argocd-appproject-details.yaml
@@ -171,31 +171,31 @@ spec:
                                   ) | nindent 38
                                   }}
 
-                              # Owner block
-                              - type: antdFlex
-                                data:
-                                  id: meta-owner-block
-                                  vertical: true
-                                  gap: 4
-                                children:
-                                  - type: antdText
-                                    data:
-                                      id: meta-owner-label
-                                      strong: true
-                                      text: "Owner"
-                                  - type: antdFlex
-                                    data:
-                                      id: meta-owner-flex
-                                      gap: 6
-                                      align: center
-                                    children:
-                                      - type: parsedText
-                                        data:
-                                          id: owner-value
-                                          strong: true
-                                          text: "No owner"
-                                          style:
-                                            color: red
+                              # # Owner block
+                              # - type: antdFlex
+                              #   data:
+                              #     id: meta-owner-block
+                              #     vertical: true
+                              #     gap: 4
+                              #   children:
+                              #     - type: antdText
+                              #       data:
+                              #         id: meta-owner-label
+                              #         strong: true
+                              #         text: "Owner"
+                              #     - type: antdFlex
+                              #       data:
+                              #         id: meta-owner-flex
+                              #         gap: 6
+                              #         align: center
+                              #       children:
+                              #         - type: parsedText
+                              #           data:
+                              #             id: owner-value
+                              #             strong: true
+                              #             text: "No owner"
+                              #             style:
+                              #               color: red
 
           # YAML tab
           - key: yaml
