--- a/templates/Factory/clusterrolebinding-details.yaml
+++ b/templates/Factory/clusterrolebinding-details.yaml
@@ -151,31 +151,30 @@ spec:
                                   }}
 
                               # Owner
-                              - type: antdFlex
-                                data:
-                                  id: meta-owner-block
-                                  vertical: true
-                                  gap: 4
-                                children:
-                                  - type: antdText
-                                    data:
-                                      id: meta-owner-label
-                                      strong: true
-                                      text: "Owner"
-                                  - type: antdFlex
-                                    data:
-                                      id: meta-owner-flex
-                                      gap: 6
-                                      align: center
-                                    children:
-                                      - type: antdText
-                                        data:
-                                          id: meta-owner-fallback
-                                          text: "No owner"
-                                          style:
-                                            color: "#FF0000"
+                              # - type: antdFlex
+                              #   data:
+                              #     id: meta-owner-block
+                              #     vertical: true
+                              #     gap: 4
+                              #   children:
+                              #     - type: antdText
+                              #       data:
+                              #         id: meta-owner-label
+                              #         strong: true
+                              #         text: "Owner"
+                              #     - type: antdFlex
+                              #       data:
+                              #         id: meta-owner-flex
+                              #         gap: 6
+                              #         align: center
+                              #       children:
+                              #         - type: antdText
+                              #           data:
+                              #             id: meta-owner-fallback
+                              #             text: "No owner"
+                              #             style:
+                              #               color: "#FF0000"
 
-          
                       # Left column: metadata and config
                       - type: antdCol
                         data:
