--- a/templates/Factory/daemonset-details.yaml
+++ b/templates/Factory/daemonset-details.yaml
@@ -188,10 +188,10 @@ spec:
                                   vertical: true
                                   gap: 4
                                 children:
-                                  {{ include "incloud-web-resources.factory.counters.fields" (dict
-                                      "jsonPath" ".spec.template.spec.tolerations"
-                                      "type" "tolerations"
-                                      "title" "Tolerations"
+                                  {{ include "incloud-web-resources.factory.tolerations.block" (dict 
+                                    "endpoint" "/api/clusters/{2}/k8s/apis/apps/v1/namespaces/{3}/daemonsets/{6}"
+                                    "jsonPathToArray" ".spec.template.spec.tolerations"
+                                    "pathToValue" "/spec/template/spec/tolerations"
                                     ) | nindent 34
                                   }}
 
@@ -224,24 +224,24 @@ spec:
                                   }}
 
                               # Owner information block
-                              - type: antdFlex
-                                data:
-                                  id: ds-owner-block
-                                  vertical: true
-                                  gap: 4
-                                children:
-                                  - type: antdText
-                                    data:
-                                      id: ds-owner-label
-                                      text: Owner
-                                      strong: true
-                                  - type: parsedText
-                                    data:
-                                      id: ds-owner-value
-                                      strong: true
-                                      text: "No owner"
-                                      style:
-                                        color: red
+                              # - type: antdFlex
+                              #   data:
+                              #     id: ds-owner-block
+                              #     vertical: true
+                              #     gap: 4
+                              #   children:
+                              #     - type: antdText
+                              #       data:
+                              #         id: ds-owner-label
+                              #         text: Owner
+                              #         strong: true
+                              #     - type: parsedText
+                              #       data:
+                              #         id: ds-owner-value
+                              #         strong: true
+                              #         text: "No owner"
+                              #         style:
+                              #           color: red
 
                       # RIGHT COLUMN: Status counts
                       - type: antdCol
@@ -290,44 +290,45 @@ spec:
                                       text: "{reqsJsonPath[0]['.status.desiredNumberScheduled']['-']}"
 
                   # ---- VOLUMES SECTION ----
-                  - type: antdCol
-                    data:
-                      id: ds-volumes-col
-                      style:
-                        marginTop: 10
-                        padding: 10
-                    children:
-                      - type: VisibilityContainer
-                        data:
-                          id: ds-volumes-container
-                          value: "{reqsJsonPath[0]['.spec.template.spec.volumes']['-']}"
-                          style:
-                            margin: 0
-                            padding: 0
-                        children:
-                          # Section title
-                          - type: antdText
-                            data:
-                              id: ds-volumes-label
-                              text: Volumes
-                              strong: true
-                              style:
-                                fontSize: 22
-                                marginBottom: 32px
-                          # Table rendering volumes
-                          - type: EnrichedTable
-                            data:
-                              id: ds-volumes-table
-                              fetchUrl: "/api/clusters/{2}/k8s/apis/apps/v1/namespaces/{3}/daemonsets/{6}"
-                              clusterNamePartOfUrl: "{2}"
-                              customizationId: factory-daemonset-details-volume-list
-                              baseprefix: "/openapi-ui"
-                              withoutControls: true
-                              pathToItems:
-                                - spec
-                                - template
-                                - spec
-                                - volumes
+                  # TODO to be done
+                  # - type: antdCol
+                  #   data:
+                  #     id: ds-volumes-col
+                  #     style:
+                  #       marginTop: 10
+                  #       padding: 10
+                  #   children:
+                  #     - type: VisibilityContainer
+                  #       data:
+                  #         id: ds-volumes-container
+                  #         value: "{reqsJsonPath[0]['.spec.template.spec.volumes']['-']}"
+                  #         style:
+                  #           margin: 0
+                  #           padding: 0
+                  #       children:
+                  #         # Section title
+                  #         - type: antdText
+                  #           data:
+                  #             id: ds-volumes-label
+                  #             text: Volumes
+                  #             strong: true
+                  #             style:
+                  #               fontSize: 22
+                  #               marginBottom: 32px
+                  #         # Table rendering volumes
+                  #         - type: EnrichedTable
+                  #           data:
+                  #             id: ds-volumes-table
+                  #             fetchUrl: "/api/clusters/{2}/k8s/apis/apps/v1/namespaces/{3}/daemonsets/{6}"
+                  #             clusterNamePartOfUrl: "{2}"
+                  #             customizationId: factory-daemonset-details-volume-list
+                  #             baseprefix: "/openapi-ui"
+                  #             withoutControls: true
+                  #             pathToItems:
+                  #               - spec
+                  #               - template
+                  #               - spec
+                  #               - volumes
 
                   # ---- INIT CONTAINERS SECTION ----
                   - type: antdCol
