--- a/templates/Factory/node-details.yaml
+++ b/templates/Factory/node-details.yaml
@@ -224,31 +224,12 @@ spec:
                                   vertical: true
                                   gap: 4
                                 children:
-                                  {{ include "incloud-web-resources.factory.counters.fields" (dict
-                                      "jsonPath" ".spec.taints"
-                                      "type" "taints"
-                                      "title" "Taints"
+                                  {{ include "incloud-web-resources.factory.taints.block" (dict 
+                                    "endpoint" "/api/clusters/{2}/k8s/api/v1/nodes/{5}"
+                                    "jsonPathToArray" ".spec.taints"
+                                    "pathToValue" "/spec/taints"
                                     ) | nindent 34
                                   }}
-                                  - type: Taints
-                                    data:
-                                      id: taints
-                                      reqIndex: 0
-                                      jsonPathToArray: '.spec.taints'
-                                      text: "~counter~ Taints"
-                                      errorText: "0 Taints"
-                                      notificationSuccessMessage: "Updated successfully"
-                                      notificationSuccessMessageDescription: "Taints have been updated"
-                                      modalTitle: "Edit taints"
-                                      modalDescriptionText: ""
-                                      inputLabel: ""
-                                      endpoint: /api/clusters/{2}/k8s/api/v1/nodes/{5}
-                                      pathToValue: "/spec/taints"
-                                      editModalWidth: "800px"
-                                      cols:
-                                        - 8
-                                        - 8
-                                        - 6
 
                               # Annotations counter block
                               - type: antdFlex
