--- a/templates/Factory/secret-details.yaml
+++ b/templates/Factory/secret-details.yaml
@@ -172,30 +172,30 @@ spec:
                                   }}
 
                               # Owner block
-                              - type: antdFlex
-                                data:
-                                  id: meta-owner-block
-                                  vertical: true
-                                  gap: 4
-                                children:
-                                  - type: antdText
-                                    data:
-                                      id: meta-owner-label
-                                      strong: true
-                                      text: "Owner"
-                                  - type: antdFlex
-                                    data:
-                                      id: meta-owner-flex
-                                      gap: 6
-                                      align: center
-                                    children:
-                                      - type: parsedText
-                                        data:
-                                          id: owner-value
-                                          strong: true
-                                          text: "No owner"
-                                          style:
-                                            color: red
+                              # - type: antdFlex
+                              #   data:
+                              #     id: meta-owner-block
+                              #     vertical: true
+                              #     gap: 4
+                              #   children:
+                              #     - type: antdText
+                              #       data:
+                              #         id: meta-owner-label
+                              #         strong: true
+                              #         text: "Owner"
+                              #     - type: antdFlex
+                              #       data:
+                              #         id: meta-owner-flex
+                              #         gap: 6
+                              #         align: center
+                              #       children:
+                              #         - type: parsedText
+                              #           data:
+                              #             id: owner-value
+                              #             strong: true
+                              #             text: "No owner"
+                              #             style:
+                              #               color: red
 
                       # Right column: type info
                       - type: antdCol
@@ -225,6 +225,24 @@ spec:
                                     data:
                                       id: secret-type-value
                                       text: "{reqsJsonPath[0]['.type']['-']}"
+
+                              # Secret SA
+                              - type: antdFlex
+                                data:
+                                  id: secret-sa-block
+                                  vertical: true
+                                  gap: 4
+                                children:
+                                  # SA Link
+                                  {{ include "incloud-web-resources.factory.links.details" (dict
+                                      "reqIndex" 0
+                                      "type" "serviceaccount"
+                                      "title" "ServiceAccount"
+                                      "jsonPath" ".metadata.annotations['kubernetes.io/service-account.name']"
+                                      "namespace" "{3}"
+                                      "factory" "serviceaccount-details"
+                                    ) | nindent 34 
+                                  }}
 
           # YAML tab
           - key: yaml
