--- a/templates/TableUriMapping/apiextensions.k8s.io.v1.crd.yaml
+++ b/templates/TableUriMapping/apiextensions.k8s.io.v1.crd.yaml
@@ -1,15 +1,11 @@
-apiVersion: v1
-items:
-  - apiVersion: front.in-cloud.io/v1alpha1
-    kind: TableUriMapping
-    metadata:
-      name: stock-cluster-crd-details
-    spec:
-      keysToParse:
-        - metadata
-        - name
-      id: "stock-cluster-/apiextensions.k8s.io/v1/customresourcedefinitions"
-      pathToNavigate: "/openapi-ui/{clusterName}/factory/crd-details/~recordValue~"
-
-kind: List
+---
+apiVersion: front.in-cloud.io/v1alpha1
+kind: TableUriMapping
 metadata:
+  name: stock-cluster-crd-details
+spec:
+  keysToParse:
+    - metadata
+    - name
+  id: "stock-cluster-/apiextensions.k8s.io/v1/customresourcedefinitions"
+  pathToNavigate: "/openapi-ui/{clusterName}/factory/crd-details/~recordValue~"
