--- a/templates/TableUriMapping/apps.v1.deployments.yaml
+++ b/templates/TableUriMapping/apps.v1.deployments.yaml
@@ -1,32 +1,29 @@
-apiVersion: v1
-items:
-  - apiVersion: front.in-cloud.io/v1alpha1
-    kind: TableUriMapping
-    metadata:
-      name: stock-cluster-apps.v1.deployments
-    spec:
-      keysToParse:
-        - metadata
-        - name
-      keysToParseSecond:
-        - metadata
-        - namespace
-      id: "stock-cluster-/apps/v1/deployments"
-      pathToNavigate: "/openapi-ui/{clusterName}/~recordValueSecond~/factory/deployment-details/~recordValue~"
-
-  - apiVersion: front.in-cloud.io/v1alpha1
-    kind: TableUriMapping
-    metadata:
-      name: stock-namespace-apps.v1.deployments
-    spec:
-      keysToParse:
-        - metadata
-        - name
-      keysToParseSecond:
-        - metadata
-        - namespace
-      id: "stock-namespace-/apps/v1/deployments"
-      pathToNavigate: "/openapi-ui/{clusterName}/~recordValueSecond~/factory/deployment-details/~recordValue~"
-
-kind: List
+---
+apiVersion: front.in-cloud.io/v1alpha1
+kind: TableUriMapping
 metadata:
+  name: stock-cluster-apps.v1.deployments
+spec:
+  keysToParse:
+    - metadata
+    - name
+  keysToParseSecond:
+    - metadata
+    - namespace
+  id: "stock-cluster-/apps/v1/deployments"
+  pathToNavigate: "/openapi-ui/{clusterName}/~recordValueSecond~/factory/deployment-details/~recordValue~"
+
+---
+apiVersion: front.in-cloud.io/v1alpha1
+kind: TableUriMapping
+metadata:
+  name: stock-namespace-apps.v1.deployments
+spec:
+  keysToParse:
+    - metadata
+    - name
+  keysToParseSecond:
+    - metadata
+    - namespace
+  id: "stock-namespace-/apps/v1/deployments"
+  pathToNavigate: "/openapi-ui/{clusterName}/~recordValueSecond~/factory/deployment-details/~recordValue~"
