--- a/templates/TableUriMapping/apps.v1.replicaset.yaml
+++ b/templates/TableUriMapping/apps.v1.replicaset.yaml
@@ -1,46 +1,44 @@
-apiVersion: v1
-items:
-  - apiVersion: front.in-cloud.io/v1alpha1
-    kind: TableUriMapping
-    metadata:
-      name: stock-cluster-apps.v1.replicasets
-    spec:
-      keysToParse:
-        - metadata
-        - name
-      keysToParseSecond:
-        - metadata
-        - namespace
-      id: "stock-cluster-/apps/v1/replicasets"
-      pathToNavigate: "/openapi-ui/{clusterName}/~recordValueSecond~/factory/replicaset-details/~recordValue~"
-
-  - apiVersion: front.in-cloud.io/v1alpha1
-    kind: TableUriMapping
-    metadata:
-      name: stock-namespace-apps.v1.replicasets
-    spec:
-      keysToParse:
-        - metadata
-        - name
-      keysToParseSecond:
-        - metadata
-        - namespace
-      id: "stock-namespace-/apps/v1/replicasets"
-      pathToNavigate: "/openapi-ui/{clusterName}/~recordValueSecond~/factory/replicaset-details/~recordValue~"
-
-  - apiVersion: front.in-cloud.io/v1alpha1
-    kind: TableUriMapping
-    metadata:
-      name: factory-apps.v1.replicasets
-    spec:
-      keysToParse:
-        - metadata
-        - name
-      keysToParseSecond:
-        - metadata
-        - namespace
-      id: "factory-/apps/v1/replicasets"
-      pathToNavigate: "/openapi-ui/{2}/~recordValueSecond~/factory/replicaset-details/~recordValue~"
-
-kind: List
+---
+apiVersion: front.in-cloud.io/v1alpha1
+kind: TableUriMapping
 metadata:
+  name: stock-cluster-apps.v1.replicasets
+spec:
+  keysToParse:
+    - metadata
+    - name
+  keysToParseSecond:
+    - metadata
+    - namespace
+  id: "stock-cluster-/apps/v1/replicasets"
+  pathToNavigate: "/openapi-ui/{clusterName}/~recordValueSecond~/factory/replicaset-details/~recordValue~"
+
+---
+apiVersion: front.in-cloud.io/v1alpha1
+kind: TableUriMapping
+metadata:
+  name: stock-namespace-apps.v1.replicasets
+spec:
+  keysToParse:
+    - metadata
+    - name
+  keysToParseSecond:
+    - metadata
+    - namespace
+  id: "stock-namespace-/apps/v1/replicasets"
+  pathToNavigate: "/openapi-ui/{clusterName}/~recordValueSecond~/factory/replicaset-details/~recordValue~"
+
+---
+apiVersion: front.in-cloud.io/v1alpha1
+kind: TableUriMapping
+metadata:
+  name: factory-apps.v1.replicasets
+spec:
+  keysToParse:
+    - metadata
+    - name
+  keysToParseSecond:
+    - metadata
+    - namespace
+  id: "factory-/apps/v1/replicasets"
+  pathToNavigate: "/openapi-ui/{2}/~recordValueSecond~/factory/replicaset-details/~recordValue~"
