--- a/templates/TableUriMapping/batch.v1.cronjobs.yaml
+++ b/templates/TableUriMapping/batch.v1.cronjobs.yaml
@@ -1,32 +1,29 @@
-apiVersion: v1
-items:
-  - apiVersion: front.in-cloud.io/v1alpha1
-    kind: TableUriMapping
-    metadata:
-      name: stock-cluster-batch.v1.cronjobs
-    spec:
-      keysToParse:
-        - metadata
-        - name
-      keysToParseSecond:
-        - metadata
-        - namespace
-      id: "stock-cluster-/batch/v1/cronjobs"
-      pathToNavigate: "/openapi-ui/{clusterName}/~recordValueSecond~/factory/cronjob-details/~recordValue~"
-
-  - apiVersion: front.in-cloud.io/v1alpha1
-    kind: TableUriMapping
-    metadata:
-      name: stock-namespace-batch.v1.cronjobs
-    spec:
-      keysToParse:
-        - metadata
-        - name
-      keysToParseSecond:
-        - metadata
-        - namespace
-      id: "stock-namespace-/batch/v1/cronjobs"
-      pathToNavigate: "/openapi-ui/{clusterName}/~recordValueSecond~/factory/cronjob-details/~recordValue~"
-
-kind: List
+---
+apiVersion: front.in-cloud.io/v1alpha1
+kind: TableUriMapping
 metadata:
+  name: stock-cluster-batch.v1.cronjobs
+spec:
+  keysToParse:
+    - metadata
+    - name
+  keysToParseSecond:
+    - metadata
+    - namespace
+  id: "stock-cluster-/batch/v1/cronjobs"
+  pathToNavigate: "/openapi-ui/{clusterName}/~recordValueSecond~/factory/cronjob-details/~recordValue~"
+
+---
+apiVersion: front.in-cloud.io/v1alpha1
+kind: TableUriMapping
+metadata:
+  name: stock-namespace-batch.v1.cronjobs
+spec:
+  keysToParse:
+    - metadata
+    - name
+  keysToParseSecond:
+    - metadata
+    - namespace
+  id: "stock-namespace-/batch/v1/cronjobs"
+  pathToNavigate: "/openapi-ui/{clusterName}/~recordValueSecond~/factory/cronjob-details/~recordValue~"
